public/stylesheets/sass/application.sass
@import round
@import grid

/* COLORS AND VARIABLES AND THINGS */

!red = #d74e3d
!orange = #c97a37
!yellow = #fcc870
!green_light = #a4c262
!green_dark = #519e50
!blue_pale = #d1d0fe
!blue = #709bbd

/* GENERAL STYLING FOR ALL ELEMENTS */

body, div, h1, h2, h3, h4, h5, h6, ol, ul, p, pre, table, li
  :margin 0
  :padding 0
p
  :padding .5em
.timestamp-relative
.timestamp-absolute
  :display none

pre
  :padding .5em
  :overflow auto

.flash div
  :margin 1em
  :padding .5em
  &.notice
    :border = 2px solid !green_dark
    +round(3px)
  &.error
    :border = 2px solid !red
    +round(3px)
  

/* STYLING FOR SPECIFIC VIEWS */

/* Style for header */
#header
  +row
  .title
    +column
    +grid_12
    :background #eeeeee
    h1
      +column
      +grid_12
      :font-family sans-serif
      :margin 0
      :padding .5em 1em
#navigation
  +row
  ul
    :overflow hidden
    :background #eeeeee
    :margin 0 10px
    li
      +column
      +grid_2
      //:display inline-block
      &.first
        +clear_1("left")
      a
        :text-align center
        :text-decoration none
        :background #dddddd
        :color black
        :font-size 120%
        :font-family sans-serif
        :padding .25em .5em
        //:display inline-block
        :display block
      &.current 
        a
          :background #aaa
          :color white
      a:hover
        :background #cccccc
#sub_navigation
  +row
  ul
    :margin 0 10px
    :overflow hidden
    :background #aaa
    li
      +column
      +grid_2
      :text-align center
      a
        +round(1em)
        :text-decoration none
        :background #ddd
        :color black
        :font-family sans-serif
        :padding .25em .75em
        :margin .5em 0
        :font-size 80%
        :display inline-block
      a:hover
        :background #fff


/* Style for tickets/index */

#content
  +row
  :margin-top 10px
  .display
    +column
    +grid_8
    table.tickets
      :width 100%
      //:margin 1em
      tr
        td
          :border-bottom 1px solid #cccccc
          :padding .5em
          &.status
            :text-align center
            span
              +round(3px)
              :padding .25em .5em
              :font-family sans-serif
              :font-size 80%
              :font-weight bold
        &.header
          :background #eeeeee
          td
            :font-weight bold
  .filters
    +column
    +grid_4
    :background #eee

/* Style for tickets/show and tickets/new */

.ticket
  :margin 1em
  :width 60%
  .current
    :padding .5em
    h2.subject
      :padding .25em 0
    .description
      pre
        :background #eeeeee
  .metadata
    :width 100%
    table
      :padding .5em 0
      td
        :text-align center
        :padding 0 1em
        :border-right 1px solid black
        &.id
          :border none
      tr.header
        td
          :font-size 80%

  .history
    :clear both
    :padding 1em
    .change_set
      :border-top 1px solid #cccccc
      :padding .5em 0
      .metadata
        :font-size 80%
        :text-align right
      ul.changes
        :padding-bottom .5em
        li
          :list-style-type none
          :font-weight bold
          :font-size 80%
          :font-family sans-serif
    .comment
      :background #eeeeee
      +round(8px)
      pre
        :background #dddddd
      //:margin-left 1em
  form
    .subject
      :font-size 120%
      :padding .5em
      p
        :margin 0
      input
        :font-size 120%
    .description
      :padding .5em
      p
        :margin 0
  
/* STATUS COLORING */

=status_color( !background, !meta, !foreground=black )
  & > .status span
    :background= !background
  & > .metadata
    :background= !background
    td
      :color= !foreground
      :border-color= !meta
    tr.header td
      :color= !meta

.new.ticket
  +status_color(!green_dark, !green_light)
.open.ticket
  +status_color(!green_light, !green_dark)
.resolved.ticket
  +status_color(!blue_pale, !blue)

